# furnace

./: Cargo.toml
bench/: arith.fctt  brunerie_appendix.ctt
benches/: arith.rs
examples/: algstruct.fctt  binnat.fctt  bool.fctt  brunerie.fctt  category.fctt  circle.fctt  collection.fctt  constcubes.fctt  control.fctt  csystem.fctt  demo.fctt  discor.fctt  equiv.fctt  grothendieck.fctt  groupoidTrunc.fctt  hedberg.fctt  helix.fctt  hnat.fctt  hz.fctt  idtypes.fctt  injective.fctt  int.fctt  integer.fctt  interval.fctt  lambek.fctt  list.fctt  nat.fctt  opposite.fctt  ordinal.fctt  pi.fctt  pointedMaps.fctt  prelude.fctt  propTrunc.fctt  retract.fctt  setquot.fctt  sigma.fctt  subset.fctt  summary.fctt  susp.fctt  torsor.fctt  (+3 more)
src/: lib.rs  main.rs  term.rs  utils.rs
src/ctt/: alpha_eq.rs  formula.rs  mod.rs  system.rs  term.rs
src/flame/: mod.rs
src/parser/: ast.rs  grammar.lalrpop  mod.rs
src/precise/: analyze.rs  context.rs  mod.rs  term.rs
src/resolver/: context.rs  declaration.rs  error.rs  mod.rs  module.rs  telescope.rs  term.rs
src/typechecker/: check.rs  context.rs  equiv.rs  error.rs  eval.rs  heat.rs  infer.rs  mod.rs  nominal.rs
src/typechecker/canon/: app.rs  comp.rs  eval.rs  glue.rs  heat.rs  mod.rs  nominal.rs
tests/: check.rs  mark.rs  parse.rs  resolve.rs
